--- a/src/GUI/DSSanPham.form
+++ b/src/GUI/DSSanPham.form
@@ -238,12 +238,13 @@
                   <Font name="Segoe UI" size="12" style="1"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="4">
+                  <Table columnCount="6" rowCount="4">
                     <Column editable="false" title="M&#xe3; s&#x1ea3;n ph&#x1ea9;m" type="java.lang.Integer"/>
                     <Column editable="false" title="T&#xea;n s&#x1ea3;n ph&#x1ea9;m" type="java.lang.String"/>
                     <Column editable="false" title="Gi&#xe1; nh&#x1ead;p" type="java.lang.Double"/>
                     <Column editable="false" title="Gi&#xe1; b&#xe1;n" type="java.lang.Double"/>
                     <Column editable="false" title="M&#xe3; danh M&#x1ee5;c" type="java.lang.Integer"/>
+                    <Column editable="false" title="S&#x1ed1; l&#x1b0;&#x1ee3;ng" type="java.lang.Integer"/>
                   </Table>
                 </Property>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
